hphp/test/zend/good/ext/hash/tests/hash_pbkdf2_basic.php.skipif
<?hh
<<__EntryPoint>> function main() {
extension_loaded('hash') or die('skip: hash extension not loaded.');
}
