hphp/test/zend/bad/ext/standard/tests/general_functions/get_cfg_var_variation8.php.skipif
<?php if (version_compare(PHP_VERSION, "5.3", "<")) die("skip requires 5.3 or greater"); ?>